@@ -365,7 +365,8 @@
  *
  * Lua and Lua Report icons are based on <a href="http://lua-users.org/wiki/LuaLogo">artwork by Alexandre Nakonechnyj</a>.
  *
- * Copyright © 1998 Lua.org. Graphic design by Alexandre Nakonechnyj.
+ * <ul>
+ * <li> Portions Copyright &copy; 1998 Lua.org. Graphic design by Alexandre Nakonechnyj.
  *
  * Permission is hereby granted, without written agreement and without 
  * license or royalty fees, to use, copy, and distribute this logo 
@@ -377,7 +378,18 @@
  * - The only modification you can make is to adapt the orbiting
  *   text to your product name.
  * - The logo can be used in any scale as long as the relative
- *   proportions of its elements are maintained. 
+ *   proportions of its elements are maintained.</li>
+ * </ul>
+ * 
+ * Taskbar overlay icon was copied from
+ * <a href="http://p.yusukekamiyamane.com/">Fugue</a> icon set.
+ *
+ * <ul>
+ * <li> Portions Copyright &copy; 2012 Yusuke Kamiyamane
+ *
+ * These icons are licensed under
+ * a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>.</li>
+ * </ul>
  *
  * <center>***</center>
  *
